# easy_strings

./: Cargo.toml  LICENSE-MIT  README.markdown
src/: adapters.rs  ezstring.rs  lib.rs
tests/: test.rs
